--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -12,11 +12,11 @@
                         <div class="mb-3">
                             {{ form|crispy }}
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Sign up</button>
+                        <button type="submit" class="btn btn-success w-100">Sign up</button>
                     </form>
                     <div class="border-top pt-3">
                         <small class="text-muted">
-                            Already have an account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+                            Already have an account? <a class="ml-2 btn btn-outline-success" href="{% url 'login' %}">Sign In</a>
                         </small>
                     </div>
                 </div>
