--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -5,29 +5,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if title %}
-        <title>Habit tracker - {{ title }}</title>
+        <title>Habit blog - {{ title }}</title>
     {% else %}
-        <title>Habit tracker</title>
+        <title>Habit blog</title>
     {% endif %}
     <link rel="stylesheet" href="{% static 'habits/main.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
   <body class="bg-body-tertiary">
     <main>
-      <nav class="navbar navbar-expand-lg bg-success py-1" data-bs-theme="dark">
+      <nav class="navbar navbar-expand-lg bg-primary py-1" data-bs-theme="dark">
         <div class="container">
-          <a class="navbar-brand fs-2  text-light px-3 py-0 rounded bg-dark-subtle shadow-sm" href="{% url 'home' %}">Tracker</a>
+          <a class="navbar-brand fs-2  text-dark px-4 py-0 rounded bg-light shadow-sm" href="{% url 'blog-home' %}">Blog</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link fs-4 active" href="#">Habits</a>
-              </li>
-              <li>
-                <a class="nav-link fs-4 active" href="{% url 'blog-home' %}">Blog</a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-4 active" href="{% url 'home' %}">Tracker</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-4 active" href="#">Habits</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
               {% if user.is_authenticated %}
