--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,9 +5,9 @@
     <div class="row">
         <div class="col-md-6 col-lg-5 mx-auto">
             <div class="card">
-                <div class="card-body bg-secondry">
+                <div class="card-body bg-light">
                     <div class="d-flex align-items-center gap-3">
-                        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+                        <img class="rounded-circle account-img img-thumbnail" src="{{ user.profile.image.url }}">
                         <div class="media-body">
                         <h2 class="account-heading">{{ user.username }}</h2>
                         <p class="text-secondary">{{ user.email }}</p>
@@ -21,7 +21,7 @@
                             {{ p_form|crispy }}
                         </fieldset>
                         <div class="form-group">
-                            <button class="btn btn-primary mt-2" type="submit">Update</button>
+                            <button class="btn btn-success mt-2" type="submit">Update</button>
                         </div>
                     </form>
                 </div>
