--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -39,5 +39,23 @@
     {% empty %}
       <p class="text-muted">No posts yet.</p>
     {% endfor %}
+    {% if is_paginated %}
+      {% if page_obj.has_previous %}
+        <a class="ml-2 btn btn-outline-primary" href="?page=1">First Page</a>
+        <a class="ml-2 btn btn-outline-primary" href="?page={{ page_obj.previous_page_number }}"> Pervious Page</a>
+      {% endif %}
+      {% for num in page_obj.paginator.num_range %}
+        {% if page_obj.number == num %}
+          <a class="ml-2 btn btn-outline-primary" href="?page={{ num }}">{{ num }}</a>
+        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+          <a class="ml-2 btn btn-outline-primary" href="?page={{ num }}">{{ num }}</a>
+        {%endif%}
+      {% endfor %}
+      {% if page_obj.has_next %}
+        <a class="ml-2 btn btn-outline-primary" href="?page={{ page_obj.next_page_number }}">First Page</a>
+        <a class="ml-2 btn btn-outline-primary" href="?page={{ page_obj.paginator.num_pages }}">Next Page</a>
+      {% endif %}
+    {% endif %}
   </div>
+
 {% endblock content %}
